Refactoring hierarchy